--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
   },
   "dependencies": {
     "@hoc-element/table": "^0.2.2",
+    "clipboard": "^2.0.6",
     "core-js": "^3.6.4",
     "element-ui": "^2.11.1",
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/eslint-parser": "^7.11.5",
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-eslint": "^4.2.0",
     "@vue/cli-service": "~4.2.0",
     "@vue/eslint-config-standard": "^4.0.0",
-    "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.1.2",
     "node-sass": "^4.13.1",
     "sass-loader": "^8.0.2",
